<resources>
    <string name="app_name">E-Market</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fb_login_protocol_scheme">fb543210645882499</string>
    <string name="app_id">543210645882499</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm password</string>
    <string name="username">Username</string>
    <string name="signin">Sign in</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="regerrpass">Password have to longer than 6 character</string>
    <string name="curentpass">Current password</string>
    <string name="newpass">New password</string>
    <string name="repass">Re-type new password</string>
    <string name="changepass">Change password</string>
    <string name="changing_password">Changing your password…</string>
    <string name="notify">Notification Setting</string>
    <string name="allowpus">Allow push notification</string>
    <string name="language">Language</string>
    <string name="please_choose_your_language">Please choose your language</string>
    <string name="amount">Amount</string>
    <string name="lbOrderInfor">Order Information</string>
    <string name="lbOrderCode">Order code</string>
    <string name="lbOrderDate">Order date</string>
    <string name="lbOrderStatus">Order status</string>
    <string name="lbFood">Foods</string>
    <string name="lbDeliveryInfor">Delivery Information</string>
    <string name="lbName">Name</string>
    <string name="district">Province</string>
    <string name="college">District</string>
    <string name="address">Address</string>
    <string name="lbPhone">Phone</string>
    <string name="address_type">Address type</string>
    <string name="lbNote">Note</string>
    <string name="sub_total">Subtotal</string>
    <string name="lbDelevery">Delivery fee</string>
    <string name="total">Total</string>
    <string name="re_order">Re-order</string>
    <string name="time">Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="map">Map</string>
    <string name="font_primary" translatable="false">helveticaneue.ttf</string>
    <string name="font_light" translatable="false">helveticaneuelight.ttf</string>
    <string name="font_thin" translatable="false">helveticaneueultralight.ttf</string>
    <string name="myanmar_font" translatable="false">ZawgyiOne.ttf</string>
    <string name="english" translatable="false">English</string>
    <string name="japan" translatable="false">日本語</string>
    <string name="myanmar" translatable="false">မြန်မာစာ</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="deliveryprocess">Delivery process</string>
    <string name="buytutorial">Buy tutorial</string>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>ja</item>
        <item>vi</item>
        <item>my</item>
    </string-array>
    <string-array name="open_day">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="opening">Opening</string>
    <string name="closed">Closed</string>
    <string name="close_restaurant">Close</string>
    <string name="review_bad">Bad</string>
    <string name="review_average">Average</string>
    <string name="review_good">Good</string>
    <string name="review_excellent">Excellent</string>
    <string-array name="restaurant_rating_item">
        <item>Location</item>
        <item>Price</item>
        <item>Quality</item>
        <item>Services</item>
        <item>Decorations</item>
    </string-array>
    <string-array name="food_rating_item">
        <item>Price</item>
        <item>Quality</item>
        <item>Decorations</item>
    </string-array>
    <string name="review_count">%1$d review(s)</string>
    <string name="review">Review</string>
    <string name="toast_input_content">Please input your review content</string>
    <string name="rating">Rating</string>
    <string name="restaurant_review_title">Restaurant review</string>
    <string name="food_review_title">%1$s\'s review </string>
    <string name="add_review">Add review</string>
    <string name="review_title_hint">Title (optional)</string>
    <string name="review_content_hint">Please input review content</string>
    <string name="sending_review">Sending review…</string>
    <string name="review_send_success">Your review has been sent successfully</string>
    <string name="all">All</string>
    <string name="take_away">Take away</string>
    <string name="description">Description</string>
    <string name="cost">Cost</string>
    <string name="direction">Direction</string>
    <string name="capacity">Capacity</string>
    <string name="categories">Categories</string>
    <string name="cuisines">Cuisines</string>
    <string name="typical_dishes">Typical dishes</string>
    <string name="services">Services</string>
    <string name="holidays">Holidays</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more">More</string>
    <string name="price_with_unit" translatable="false">%1$s %2$s</string>
    <string name="cart_total">Total:</string>
    <string name="facilities">Facilities</string>
    <string name="open_time">Open Time</string>
    <string name="logout_confirm_message">Are you sure to logout?</string>
    <string name="loading">Loading…</string>
    <string name="logging_out">Logging out…</string>
    <string name="logging_in">Logging in…</string>
    <string name="tap_to_retry">Đã xảy ra lỗi, nhấp để thử lại</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order_now">Order Now</string>
    <string name="as_soon_as">As soon as possible</string>
    <string name="call_string">Call</string>
    <string name="like_string">Like</string>
    <string name="photo_string">Photo</string>
    <string name="review_string">Review</string>
    <string name="frg_profile_btn_review">Review History</string>
    <string name="frg_profile_change_password">Change password</string>
    <string name="frg_profile_basic_info">Basic Information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="frg_profile_gender">Gender</string>
    <string name="birthdate">Birthday</string>
    <string name="frg_profile_participate_date">Participate date</string>
    <string name="frg_profile_contact_info">Contact Information</string>
    <string name="number_reviews">%1$d review(s)</string>
    <string name="profile">Profile</string>
    <string name="like">%1$d</string>
    <string name="comment">%1$d</string>
    <string name="suggest">Suggest</string>
    <string name="press_back_again_to_exit">Press BACK again to exit</string>
    <string name="frg_notification_res_title">You have successful signed up</string>
    <string name="frg_notification_res_time">Just now</string>
    <string name="frg_notification_res_R">R</string>
    <string name="frg_notification_comment_time">2 days ago</string>
    <string name="frg_feedback_phonenumber">Phone number</string>
    <string name="frg_feedback_content">Feedback content</string>
    <string name="view_all_information">View all information</string>
    <string name="firstname_required">Please input your firstname</string>
    <string name="lastname_required">Please input your lastname</string>
    <string name="email_required">Please input your email</string>
    <string name="phone_required">Please input your phone number</string>
    <string name="feedback_content_required">Please input your feedback content</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="phone_invalid">Phone number is invalid</string>
    <string name="address_required">Please input your address</string>
    <string name="email_phone_required">Please input your email or phone number</string>
    <string name="password_required">Please input your password</string>
    <string name="confirm_password_required">Please confirm your password</string>
    <string name="username_required">Please input your username</string>
    <string name="email_phone_invalid">Email or phone number is invalid</string>
    <string name="password_invalid">Password must be from %1$d to %2$d characters</string>
    <string name="confirm_password_invalid">Confirm password doesn\'t match your password</string>
    <string name="new_password_required">Please input your new password</string>
    <string name="current_password_required">Please input your current password</string>
    <string name="cart_empty">There\'s no food in your cart</string>
    <string name="order_empty">There\'s no order</string>
    <string name="review_empty">You have no review</string>
    <string name="photo_empty">There\'s no photo</string>
    <string name="notification_empty">You have no notification</string>
    <string name="favorite_empty">You have no favorite food</string>
    <string name="cart_check_out">Continue</string>
    <string name="snack_network_error">Network Error</string>
    <string name="snack_server_error">Server Error</string>
    <string name="snack_success">Success</string>
    <string name="retry">Retry</string>
    <string name="number_items">%1$d items</string>
    <string name="date_not_set">Not set</string>
    <string name="registering">Registering…</string>
    <string name="updating">Updating…</string>
    <string name="first_review">Be the first one to review</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="sending_order">Sending order…</string>
    <string name="send">Send</string>
    <string name="your_recovery_email">Your recovery email</string>
    <string name="reset_link_sent">A new password has been sent to your email!</string>
    <string name="version">Version %1$s</string>
    <string name="display_name">Display name</string>
    <string name="contact_asap">We will contact with you as soon as possible</string>
    <string name="thank_you">Thank you</string>
    <string name="check_order_info">Please check your order information such as below</string>
</resources>