<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_menu"
            android:checkable="true"
            android:icon="@drawable/ic_menu_outline"
            android:title="@string/menu"/>
        <item
            android:id="@+id/nav_cart"
            android:checkable="true"
            android:icon="@drawable/ic_cart_outline"
            android:title="@string/cart"/>
        <item
            android:id="@+id/nav_favorite"
            android:checkable="true"
            android:icon="@drawable/ic_favorite_outline"
            android:title="@string/favorite"/>
        <item
            android:id="@+id/nav_notification"
            android:checkable="true"
            android:icon="@drawable/ic_notification_outline"
            android:title="@string/notification"
            app:actionLayout="@layout/nav_badge_notification"/>
        <item
            android:id="@+id/nav_feedback"
            android:checkable="true"
            android:icon="@drawable/ic_feedback_outline"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/nav_help"
            android:checkable="true"
            android:icon="@drawable/ic_help_outline"
            android:title="@string/help"/>
        <item
            android:id="@+id/nav_setting"
            android:checkable="true"
            android:icon="@drawable/ic_setting_gear"
            android:title="@string/setting"/>
<!--        <item
            android:id="@+id/nav_about"
            android:checkable="true"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>-->
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_log_out_white"
            android:title="@string/sign_out"/>
    </group>

</menu>