<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#fff"
    android:gravity="bottom"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_food_detail">

    <LinearLayout
        android:id="@+id/rlAddToCart"
        style="@style/AppTheme.Button.FoodDetail">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_shop_yellow" />

        <vn.edu.dut.itf.e_market.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/add_to_cart"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlCall"
        style="@style/AppTheme.Button.FoodDetail">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_phone_yellow" />

        <vn.edu.dut.itf.e_market.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/call_string"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlBookmark"
        style="@style/AppTheme.Button.FoodDetail">

        <CheckBox
            android:id="@+id/like"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="false"
            android:layout_gravity="center"
            android:background="@drawable/ic_bookmark"
            android:button="@null" />

        <vn.edu.dut.itf.e_market.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/like_string"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>