<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_white"
    android:orientation="vertical" >

    <vn.com.brycen.restaurant.views.CustomFontTextView
        android:id="@+id/notification_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#CCCCCC"
        android:gravity="center|start"
        android:paddingLeft="20dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:text="@string/notify"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <vn.com.brycen.restaurant.views.CustomFontTextView
            android:id="@+id/notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_notifications_grey600_36dp"
            android:drawableStart="@drawable/ic_notifications_grey600_36dp"
            android:drawablePadding="3dp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/allowpus"
            android:textSize="15sp" />

        <Switch
            android:id="@+id/sb_ios"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <vn.com.brycen.restaurant.views.CustomFontTextView
        android:id="@+id/language_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#CCCCCC"
        android:gravity="center|start"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:text="@string/language"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>